# YOLOv5-QR-Detect-Decode

./: .gitignore  onnx_infer.py  requirements.txt
c-infer/: .gitignore  CMakeLists.txt  Readme.txt  csi_test.cc  main.cc  main_csi.cc
